# ocrpy

./: .buildinfo  .gitignore  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  api-reference.html  api.html  code-of-conduct.html  contributing.html  examples.html  genindex.html  index.html  index.md  license-and-credits.html  modules.html  objects.inv  ocrpy.experimental.html  ocrpy.html  ocrpy.io.html  ocrpy.parsers.html  ocrpy.parsers.table.html  ocrpy.parsers.text.html  ocrpy.pipelines.html  ocrpy.utils.html  overview.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  system-design.html  tox.ini  tutorials.html
.github/workflows/: code-quality.yml  codeql-analysis.yml  docs.yml  publish-pypi.yml  pylint.yml
_sources/: api.rst.txt  code-of-conduct.rst.txt  contributing.rst.txt  examples.rst.txt  index.rst.txt  ocrpy.experimental.rst.txt  ocrpy.parsers.table.rst.txt  ocrpy.pipelines.rst.txt  ocrpy.rst.txt  overview.rst.txt  tutorials.rst.txt
_static/: documentation_options.js
docs/: api-reference.rst  api.rst  conf.py  contributing.rst  examples.rst  index.md  index.rst  license-and-credits.rst  modules.rst  ocrpy.io.rst  ocrpy.parsers.rst  ocrpy.parsers.text.rst  ocrpy.utils.rst  overview.rst  system-design.rst
notebooks/: backends_refactor.ipynb  ocrpy_usage.ipynb  ocrpy_with_haystack.ipynb  test_ocrpy.ipynb
ocrpy/: __init__.py
ocrpy/backend/: __init__.py  gcp.py  pytesseract.py  textract.py
ocrpy/backend/base/: __init__.py  base.py
ocrpy/backend/pytesseract/: __init__.py  document.py
ocrpy/backends/: __init__.py  core.py  gcp.py  textract.py
ocrpy/backends/table/: aws_table.py
ocrpy/backends/text/: aws_text.py  gcp_text.py  tesseract_text.py
ocrpy/error_handler/: __init__.py  errors.py
ocrpy/experimental/: __init__.py  document_classifier.py  layout_parser.py
ocrpy/io/: __init__.py  reader.py  writer.py
ocrpy/parsers/: __init__.py  core.py
ocrpy/parsers/table/: __init__.py  aws_table.py  table_parser.py
ocrpy/parsers/text/: __init__.py  aws_text.py  gcp_text.py  tesseract_text.py  text_parser.py
ocrpy/pipelines/: __init__.py  config.py  index_pipeline.py  text_pipeline.py
ocrpy/utils/: __init__.py  exceptions.py  logger.py  pytesseract.py  utils.py
