[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = 'ocrpy'
description = 'unified interface to google vision, aws textract, azure, tesseract OCR, EasyOCR tools.'
readme = 'README.md'
requires-python = ">=3.7"
authors = [
  { name = "Maxentlabs", email = "info@maxentlabs.com" },
]
license = { text = "MIT" }

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Other Audience',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Financial and Insurance Industry',
]

dynamic = ["version"]

[dependencies]
attrs = {version = '21.4.0'}
detectron2= {git = "https://github.com/facebookresearch/detectron2.git@v0.5#egg=detectron2" }

[project.urls]
Source = "https://github.com/maxent-ai/ocrpy"

[tool.hatch.version]
path = "ocrpy/__init__.py"
