[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = 'ocrpy'
description = 'unified interface to google vision, aws textract, azure, tesseract OCR, EasyOCR tools.'
readme = 'README.md'
requires-python = ">=3.7"
authors = [
  { name = "Maxentlabs", email = "info@maxentlabs.com" },
]
license = { text = "MIT" }

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Other Audience',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Financial and Insurance Industry',
]

dynamic = ["version"]

[project.dependencies]
attrs ="21.4.0"
pytesseract = "0.3.6"
opencv-python = {version= '4.1.2.30'}
beautifulsoup4 = {version= '4.9.1'}
google-cloud-vision = {version= '1.0.0'}
boto3 = {version= '1.19.7'}
pdf2image = {version='1.14.0'}
numpy = {version='1.21.1'}
transformers = {version='4.20.1'}
tqdm = {version= '4.64.0'}
pandas = {version= '1.3.3'}
python-dotenv = {version='0.17.1'}
cloudpathlib = {version= '0.9.0'}
farm-haystack = {version= '1.6.0'}
torchvision = {version= '0.11.3'}
layoutparser = {version= '0.3.4'}
detectron2= {git = "https://github.com/facebookresearch/detectron2.git@v0.5#egg=detectron2" }

[project.urls]
Source = "https://github.com/maxent-ai/ocrpy"

[tool.hatch.version]
path = "ocrpy/__init__.py"
