[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = 'ocrpy'
description = 'unified interface to google vision, aws textract, azure & tesseract OCR tools.'
readme = 'README.md'
requires-python = ">=3.7"
authors = [
  { name = "Maxentlabs", email = "info@maxentlabs.com" },
]
license = { text = "MIT" }

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Other Audience',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Financial and Insurance Industry',
]

dynamic = ["version"]

dependencies = [
    'attrs',
    'pytesseract',
    'opencv-python',
    'beautifulsoup4',
    'google-cloud-vision',
    'boto3',
    'pdf2image',
    'numpy',
    'transformers',
    'tqdm',
    'pandas',
    'python-dotenv',
    'cloudpathlib',
    'farm-haystack',
    'torchvision',
    'layoutparser',
    'paddlepaddle']

[project.urls]
Source = "https://github.com/maxent-ai/ocrpy"

[tool.hatch.version]
path = "ocrpy/__init__.py"

[tool.black]
line-length = 125
fast = true